syntax = "proto3";

package timeservice;

option go_package = "timeservice/";

import "google/api/annotations.proto";

// Here is the overall time service definition where we define all our endpoints
service TimeCheck {
  // Sends time
  rpc GiveTime (TimeRequest) returns (TimeReply) {
    option (google.api.http) = {
      post: "/api/v1/time"
      body: "*"
    };
  }

  // Sends date
  rpc GiveDate(Empty) returns (DateReply) {
    option (google.api.http) = {
      get: "/api/v1/date"
    };
  }

  // Sends random quote
  rpc GiveQuote(Empty) returns (QuoteReply) {
    option (google.api.http) = {
      get: "/api/v1/quote"
    };
  }
}

// The request message containing the user's name
message TimeRequest {
  string name = 1;
}

// The response message containing the greetings
message TimeReply {
  string message = 1;
}

// The response message containing the greetings
message DateReply {
  string message = 1;
}

// The response message containing the greetings
message QuoteReply {
  string message = 1;
}

// Define an empty message
message Empty {}